Added basic collision checks in movement
-this just makes sure that the target location is an air block
-note that this considers the location of the entity to be the bottom, south-west point of the space occupied by the entity
-when this EntityLocation and the EntityVolume are combined, this describes the total space occupied by the entity